2001-12-20  Earnie Boyd  <earnie@ussers.sf.net>

	* mingwfag.shtml:  Add a section about MSYS.
	* lists.shtml: Ditto.
	* msys.shtml: New file.

2001-07-10  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw-oldfaq.shtml: Comment out reference to www.vwcl.org per
	Bug item #439906.

2001.06.10  Earnie Boyd  <earnie@users.sourceforge.net>

	* index.shtml: Add information for latest MinGW-1.0 Snapshot release.

2001.06.07  Earnie Boyd  <earnie@users.sourceforge.net>

	* licensing.shtml: Reformat, remove the "contact author" sentence for
	the w32api section.

2001.06.07  Earnie Boyd  <earnie@users.sourceforge.net>

	* mirrors.shtml: Give a warning about that the information on the page
	is for old distributions.
	* index.shtml: Change "Latest Release" to "Older Release".
	* MINGW-USERS-MONTHLY: Fix typo.

2001-02-10  Earnie Boyd  <earnie@users.sourceforge.net>

	* faq.shtml: Change the title to Download and use target="_nw" for
	links.
	* ssi/lsidebar.html: (Download): Point to faq.shtml
	* ssi/bottombar.html: ditto.

Tue Jan 30 19:10:03 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* links.shtml: Remove some dead links.  Add a target="_nw" throughout.

2001-01-21  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Readded link to faq.shtml which was lost somehow.

Fri Jan 19 13:38:34 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/faq-what.html: Better clarify what MinGW is and discuss the GCC
	and bintuils ports.

Fri Jan 19 06:16:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/faq-cross.html: Add pointers to the crossgcc mail list.

Thu Jan 18 17:41:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* lists.shtml: Add all mingw-users mailing list.

Thu Jan 18 16:18:53 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* docs.shtml: Remove Laura as the specific FAQ maintainer.
	Remove the dead link to Laura's home page.
	* mingw-oldfaq.shtml: Rename the current FAQ.